--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@oslojs/crypto": "^1.0.1",
+    "@oslojs/encoding": "^1.1.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "next": "15.1.7",
