--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
+    "arctic": "^3.3.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "next": "15.1.7",
