--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.30.4",
     "postcss": "^8",
+    "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
